bug squashing

--- a/src/components/character/character.css
+++ b/src/components/character/character.css
@@ -1064,6 +1064,7 @@ div.temperamentLocation p:nth-child(2) {
     display: flex;
     align-items: center;
     line-height: 13px;
+    justify-content: space-around;
 }
 
 .weaponsquare .parry {
